--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #General Database Config
 quarkus.database.jdbc.driver=com.mysql.cj.jdbc.Driver
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sakila
-quarkus.datasource.jdbc.username=root
-quarkus.datasource.jdbc.password=sakila
+quarkus.datasource.username=root
+quarkus.datasource.password=sakila
 
 #Hibernate Config
 quarkus.hibernate-orm.log.sql=true
